// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WindowControl should render correctly 1`] = `
<div>
  <div
    class="css-axw7ok"
    data-testid="traffic-lights"
  >
    <div
      aria-label="close"
      class="css-trrl7s"
    >
      <svg
        fill="none"
        height="6"
        style="opacity: 0; transition: opacity 0.15s ease;"
        viewBox="0 0 6 6"
        width="6"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.2 1.2L4.8 4.8M4.8 1.2L1.2 4.8"
          stroke="#4C0002"
          stroke-linecap="round"
          stroke-width="1.2"
        />
      </svg>
    </div>
    <div
      aria-label="minimize"
      class="css-pklp1d"
    >
      <svg
        fill="none"
        height="6"
        style="opacity: 0; transition: opacity 0.15s ease;"
        viewBox="0 0 6 6"
        width="6"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 3H5"
          stroke="#5C3E00"
          stroke-linecap="round"
          stroke-width="1.2"
        />
      </svg>
    </div>
    <div
      aria-label="maximize"
      class="css-12g04q5"
    >
      <svg
        fill="none"
        height="6"
        style="opacity: 0; transition: opacity 0.15s ease;"
        viewBox="0 0 6 6"
        width="6"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.2 4.8L4.8 1.2M1.2 4.8H3.8M1.2 4.8V2.2M4.8 1.2L1.2 4.8M4.8 1.2H2.2M4.8 1.2V3.8"
          stroke="#004D05"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`WindowControl should trigger mouse enter and leave event 1`] = `
<div>
  <div
    class="css-axw7ok"
    data-testid="traffic-lights"
  >
    <div
      aria-label="close"
      class="css-trrl7s"
    >
      <svg
        fill="none"
        height="6"
        style="opacity: 1; transition: opacity 0.15s ease;"
        viewBox="0 0 6 6"
        width="6"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.2 1.2L4.8 4.8M4.8 1.2L1.2 4.8"
          stroke="#4C0002"
          stroke-linecap="round"
          stroke-width="1.2"
        />
      </svg>
    </div>
    <div
      aria-label="minimize"
      class="css-pklp1d"
    >
      <svg
        fill="none"
        height="6"
        style="opacity: 1; transition: opacity 0.15s ease;"
        viewBox="0 0 6 6"
        width="6"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 3H5"
          stroke="#5C3E00"
          stroke-linecap="round"
          stroke-width="1.2"
        />
      </svg>
    </div>
    <div
      aria-label="maximize"
      class="css-12g04q5"
    >
      <svg
        fill="none"
        height="6"
        style="opacity: 1; transition: opacity 0.15s ease;"
        viewBox="0 0 6 6"
        width="6"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.2 4.8L4.8 1.2M1.2 4.8H3.8M1.2 4.8V2.2M4.8 1.2L1.2 4.8M4.8 1.2H2.2M4.8 1.2V3.8"
          stroke="#004D05"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`WindowControl should trigger mouse enter and leave event 2`] = `
<div>
  <div
    class="css-axw7ok"
    data-testid="traffic-lights"
  >
    <div
      aria-label="close"
      class="css-trrl7s"
    >
      <svg
        fill="none"
        height="6"
        style="opacity: 0; transition: opacity 0.15s ease;"
        viewBox="0 0 6 6"
        width="6"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.2 1.2L4.8 4.8M4.8 1.2L1.2 4.8"
          stroke="#4C0002"
          stroke-linecap="round"
          stroke-width="1.2"
        />
      </svg>
    </div>
    <div
      aria-label="minimize"
      class="css-pklp1d"
    >
      <svg
        fill="none"
        height="6"
        style="opacity: 0; transition: opacity 0.15s ease;"
        viewBox="0 0 6 6"
        width="6"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 3H5"
          stroke="#5C3E00"
          stroke-linecap="round"
          stroke-width="1.2"
        />
      </svg>
    </div>
    <div
      aria-label="maximize"
      class="css-12g04q5"
    >
      <svg
        fill="none"
        height="6"
        style="opacity: 0; transition: opacity 0.15s ease;"
        viewBox="0 0 6 6"
        width="6"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.2 4.8L4.8 1.2M1.2 4.8H3.8M1.2 4.8V2.2M4.8 1.2L1.2 4.8M4.8 1.2H2.2M4.8 1.2V3.8"
          stroke="#004D05"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1"
        />
      </svg>
    </div>
  </div>
</div>
`;
